--- a/_config.yml
+++ b/_config.yml
@@ -5,10 +5,16 @@ description: Dr. Julie Wei. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
 baseurl: "" # the subpath of your site, e.g. /blog/
-#url: "" # the base hostname & protocol for your site
+url: "" # the base hostname & protocol for your site
 twitter_username: ahealthierwei
+pinterest_username: ahealthierwei
+facebook_username: ahealthierwei
+google_username: ahealthierwei
+
 github_username:  julielwei
 excerpt_separator: <!---more--->
+
+searchindex: yes
 
 # Build settings
 markdown: kramdown
