--- a/_config.yml
+++ b/_config.yml
@@ -4,17 +4,20 @@ email: info@ahealthierwei.com
 description: Dr. Julie Wei. You can edit this
   line in _config.yml. It will appear in your document head meta (for
   Google search results) and in your feed.xml site description.
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "" # the base hostname & protocol for your site
+#baseurl: "/" # the subpath of your site, e.g. /blog/
+#url: "" # the base hostname & protocol for your site
+excerpt_separator: <!---more--->
+searchindex: yes
+permalink: /posts/:title
+tag_baseurl: /tag/
+method: http
+
+# Social Usernames
 twitter_username: ahealthierwei
 pinterest_username: ahealthierwei
 facebook_username: ahealthierwei
 google_username: ahealthierwei
-
 github_username:  julielwei
-excerpt_separator: <!---more--->
-
-searchindex: yes
 
 # Build settings
 markdown: kramdown
